<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">327599855823151</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb327599855823151</string>
    <!-- Facebook -->
    <!-- Twitter application ID -->
    <string name="twitter_application_id" translatable="false">22313058</string>
    <string name="twitter_url" translatable="false">https://go4lunchp7.firebaseapp.com/__/auth/handler</string>
    <string name="twitter_api_key" translatable="false" tools:ignore="Typos">ikiOCVtmEKNq75j0DLVK1Ag0g</string>
    <string name="twitter_api_secret" translatable="false" tools:ignore="Typos">8gErHZoc0oSCmyUSB5J7AMKizHklzzXUZTTaJDeFtjv1Jzhls2</string>
    <!-- Twitter -->
    <string name="app_name" translatable="false">Go4Lunch</string>
    <string name="app_name_subtitle">Find a nice restaurant and invite your coworkers for lunch!</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_map_view">Map View</string>
    <string name="title_list_view">List View</string>
    <string name="title_workmates">Workmates</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_with_google">Sign in with Google</string>
    <string name="action_sign_in_with_facebook">Sign in with Facebook</string>
    <string name="action_sign_in_with_twitter">Sign in with Twitter</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_in_with_email">Sign in with e-mail</string>
    <string name="restaurant">Restaurant</string>
    <string name="type_of_restaurant">Type of restaurant</string>
    <string name="open_hour">Open hour</string>
    <string name="address_of_restaurant">address of restaurant</string>
    <string name="_120m" translatable="false">120m</string>
    <string name="_2" translatable="false">(2)</string>
    <string name="fab_to_find_my_location" translatable="false">fab to find my location</string>
    <string name="this_workmate_approves">This workmate approves</string>
    <string name="name_of_restaurant">Name of restaurant</string>
    <string name="detail_activity_button_call">CALL</string>
    <string name="detail_activity_button_like">LIKE</string>
    <string name="detail_activity_button_website">WEBSITE</string>
    <string name="workmate_image" translatable="false">workmate image</string>
    <string name="background" translatable="false">background</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="mainfragment" translatable="false">MainFragment</string>
    <string name="restaurant_image" translatable="false">restaurant image</string>
    <string name="phone_icon" translatable="false">phone icon</string>
    <string name="star_icon" translatable="false">star icon</string>
    <string name="public_icon" translatable="false">public icon</string>
    <string name="title_activity_navigation_drawer" translatable="false">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name place holder</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">SETTINGS</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings_drawer">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="profile_image_default" translatable="false">profile image default</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="error_no_internet">Error no internet</string>
    <string name="error_unknown_error">Error unknown error</string>
    <string name="choose_restaurant">Choose restaurant</string>
    <string name="login_success">Login success</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="notifications_header">Notifications</string>

    <!-- Notifications Preferences -->
    <string name="notifications_title">Activate notifications</string>
    <string name="settings_activity">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="action_search">search</string>
    <string name="search_for_restaurant">Search for restaurant …</string>
    <string name="close_search_bar">Close search bar</string>
    <string name="app_requires_your_location">This app requires access to your location</string>
    <string name="location_not_enabled">Location is not enabled</string>
    <string name="allow_shared_my_location">"Allow to share my location "</string>
    <string name="missing_location_permission">Missing location permission</string>
    <string name="delete_my_account">DELETE MY ACCOUNT</string>
    <string name="delete_your_account_here">Delete your account here</string>
    <string name="profile_picture">Profile picture</string>
    <string name="profile_username">User name</string>
    <string name="Cancel">Cancel</string>
    <string name="account_deleted">Account deleted</string>
    <string name="Delete">Delete</string>
    <string name="delete_account_question">Do you want to delete your account permanently ?</string>
    <string name="details_title">Details</string>
    <string name="user_account">User account</string>
</resources>