<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_mapView">

    <fragment
        android:id="@+id/navigation_mapView"
        android:name="com.pierre44.go4lunch.ui.main.ui.mapView.MapViewFragment"
        android:label="@string/title_map_view"
        tools:layout="@layout/fragment_mapview" />

    <fragment
        android:id="@+id/navigation_listView"
        android:name="com.pierre44.go4lunch.ui.main.ui.listView.ListViewFragment"
        android:label="@string/title_list_view"
        tools:layout="@layout/fragment_listview" />

    <fragment
        android:id="@+id/navigation_workmates"
        android:name="com.pierre44.go4lunch.ui.main.ui.workmates.WorkmatesFragment"
        android:label="@string/title_workmates"
        tools:layout="@layout/fragment_workmates" />
</navigation>