<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="@color/go4lunchGrey"
    tools:context=".ui.activity.MainActivity">

    <!-- IMAGE IN BACKGROUND GO4LUNCH -->
    <ImageView
        android:id="@+id/go4lunchBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/go4lunchGrey"
        android:background="@drawable/restaurant_background_portrait"
        android:contentDescription="@string/background" />

    <!-- LOGO GO4LUNCH -->
    <ImageView
        android:id="@+id/go4lunchLogo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/go4lunch_logo"
        app:layout_constraintBottom_toTopOf="@+id/appTitle"
        app:layout_constraintEnd_toStartOf="@+id/go4lunchBackground"
        app:layout_constraintStart_toEndOf="@+id/go4lunchBackground"
        app:layout_constraintTop_toTopOf="@+id/go4lunchBackground"
        android:contentDescription="@string/logo" />

    <!-- TITLE GO4LUNCH -->
    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/app_name"
        android:textColor="@color/go4lunchWhite"
        android:textSize="@dimen/app_title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/go4lunchBackground"
        app:layout_constraintStart_toEndOf="@+id/go4lunchBackground"
        app:layout_constraintTop_toBottomOf="@+id/go4lunchLogo" />

    <!-- SUBTITLE GO4LUNCH -->
    <TextView
        android:id="@+id/appSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/app_name_subtitle"
        android:textColor="@color/go4lunchWhite"
        android:textSize="@dimen/app_subtitle_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/go4lunchBackground"
        app:layout_constraintStart_toEndOf="@+id/go4lunchBackground"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />

    <!-- BUTTON LOGIN WITH EMAIL-->
    <Button
        android:id="@+id/loginWithEmailButton"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:padding="@dimen/default_margin"
        android:layout_marginBottom="16dp"
        android:background="@color/go4lunchGrey"
        android:textColor="@color/go4lunchWhite"
        android:text="@string/action_sign_in_with_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appSubtitle"/>

    <!-- BUTTON LOGIN WITH GOOGLE-->
    <Button
        android:id="@+id/loginWithGoogleButton"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:padding="@dimen/default_margin"
        android:background="@color/go4lunchRedDark"
        android:textColor="@color/go4lunchWhite"
        android:text="@string/action_sign_in_with_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginWithEmailButton"/>

    <!-- BUTTON LOGIN WITH FACEBOOK-->
    <Button
        android:id="@+id/loginWithFacebookButton"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:padding="@dimen/default_margin"
        android:background="@color/com_facebook_blue"
        android:textColor="@color/go4lunchWhite"
        android:text="@string/action_sign_in_with_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginWithGoogleButton"/>

    <!-- BUTTON LOGIN WITH TWITTER-->
    <Button
        android:id="@+id/loginWithTwitterButton"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:padding="@dimen/default_margin"
        android:text="@string/action_sign_in_with_twitter"
        android:background="@color/teal_200"
        android:textColor="@color/go4lunchWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginWithFacebookButton" />

</androidx.constraintlayout.widget.ConstraintLayout>